--- a/src/modules/header/header.html
+++ b/src/modules/header/header.html
@@ -6,7 +6,7 @@
             <picture>
               <source type="image/avif" srcset="img/header__ellipse-left@1x.avif 1x, img/header__ellipse-left@2x.avif 2x">
               <source type="image/webp" srcset="img/header__ellipse-left@1x.webp 1x, img/header__ellipse-left@2x.webp 2x">
-              <img src="img/header__ellipse-left@1x.png" srcset="img/header__ellipse-left@2x.png 2x" alt="">
+              <img src="img/header__ellipse-left@1x.png" srcset="img/header__ellipse-left@2x.png 2x" alt="ellipse-animation">
             </picture>
         </div>
 
@@ -14,7 +14,7 @@
             <picture>
               <source type="image/avif" srcset="img/header__ellipse-right@1x.avif 1x, img/header__ellipse-right@2x.avif 2x">
               <source type="image/webp" srcset="img/header__ellipse-right@1x.webp 1x, img/header__ellipse-right@2x.webp 2x">
-              <img src="img/header__ellipse-right@1x.png" srcset="img/header__ellipse-right@2x.png 2x" alt="">
+              <img src="img/header__ellipse-right@1x.png" srcset="img/header__ellipse-right@2x.png 2x" alt="ellipse-animation">
             </picture>
         </div>
 
