--- a/src/modules/nav/nav.html
+++ b/src/modules/nav/nav.html
@@ -15,11 +15,25 @@
         <h3 class="h3">KateDesign</h3>
 
         <ul class="nav__list">
-            <a href="#about" class="js-nav__link"><li data-queue="7" class="nav__item">ОБО МНЕ</li></a>
-            <a href="#services" class="js-nav__link"><li data-queue="6" class="nav__item">УСЛУГИ</li></a>
-            <a href="#portfolio" class="js-nav__link"><li data-queue="5" class="nav__item">ПОРТФОЛИО</li></a>
-            <a href="#reviews" class="js-nav__link"><li data-queue="4" class="nav__item">ОТЗЫВЫ</li></a>
-            <a href="#form" class="js-nav__link"><li data-queue="3" class="nav__item">КОНТАКТЫ</li></a>
+            <a href="#about" class="js-nav__link">
+                <li data-queue="7" class="nav__item">ОБО МНЕ</li>
+            </a>
+
+            <a href="#services" class="js-nav__link">
+                <li data-queue="6" class="nav__item">УСЛУГИ</li>
+            </a>
+
+            <a href="#portfolio" class="js-nav__link">
+                <li data-queue="5" class="nav__item">ПОРТФОЛИО</li>
+            </a>
+
+            <a href="#reviews" class="js-nav__link">
+                <li data-queue="4" class="nav__item">ОТЗЫВЫ</li>
+            </a>
+
+            <a href="#form" class="js-nav__link">
+                <li data-queue="3" class="nav__item">КОНТАКТЫ</li>
+            </a>
         </ul>
 
         <div class="nav__right">
@@ -29,7 +43,7 @@
                 </button>
             </a>
 
-            <!-- <div data-queue="1" class="nav__translate">
+            <div data-queue="1" class="nav__translate">
                 <div data-lang="rus" data-position="1" id="ru" class="nav__lang js-nav__lang">
                     <svg class="nav__flag">
                     <use xlink:href="img/sprite.svg#rus"></use>
@@ -53,7 +67,7 @@
 
                     <p>UA</p>
                 </div>
-            </div> -->
+            </div>
         </div>
     </div>
 </nav>
