--- a/src/modules/popup/CalendarPopup.html
+++ b/src/modules/popup/CalendarPopup.html
@@ -29,13 +29,13 @@
                     <picture>
                         <source type="image/avif" srcset="img/popup_Calendar-1-picture@2x.avif 1x, img/popup_Calendar-1-picture@4x.avif 2x">
                         <source type="image/webp" srcset="img/popup_Calendar-1-picture@2x.webp 1x, img/popup_Calendar-1-picture@4x.webp 2x">
-                        <img src="img/popup_Calendar-1-picture@2x.png" srcset="img/popup_Calendar-1-picture@4x.png 2x" alt="">
+                        <img src="img/popup_Calendar-1-picture@2x.png" srcset="img/popup_Calendar-1-picture@4x.png 2x" alt="PortfolioPicture">
                     </picture>
 
                     <picture>
                         <source type="image/avif" srcset="img/popup_Calendar-2-picture@2x.avif 1x, img/popup_Calendar-2-picture@4x.avif 2x">
                         <source type="image/webp" srcset="img/popup_Calendar-2-picture@2x.webp 1x, img/popup_Calendar-2-picture@4x.webp 2x">
-                        <img src="img/popup_Calendar-2-picture@2x.png" srcset="img/popup_Calendar-2-picture@4x.png 2x" alt="">
+                        <img src="img/popup_Calendar-2-picture@2x.png" srcset="img/popup_Calendar-2-picture@4x.png 2x" alt="PortfolioPicture">
                     </picture>
                 </div>
 
@@ -43,28 +43,27 @@
                     <picture>
                         <source type="image/avif" srcset="img/popup_Calendar-3-picture@2x.avif 1x, img/popup_Calendar-3-picture@4x.avif 2x">
                         <source type="image/webp" srcset="img/popup_Calendar-3-picture@2x.webp 1x, img/popup_Calendar-3-picture@4x.webp 2x">
-                        <img src="img/popup_Calendar-3-picture@2x.png" srcset="img/popup_Calendar-3-picture@4x.png 2x" alt="">
+                        <img src="img/popup_Calendar-3-picture@2x.png" srcset="img/popup_Calendar-3-picture@4x.png 2x" alt="PortfolioPicture">
                     </picture>
 
                     <picture>
                         <source type="image/avif" srcset="img/popup_Calendar-4-picture@2x.avif 1x, img/popup_Calendar-4-picture@4x.avif 2x">
                         <source type="image/webp" srcset="img/popup_Calendar-4-picture@2x.webp 1x, img/popup_Calendar-4-picture@4x.webp 2x">
-                        <img src="img/popup_Calendar-4-picture@2x.png" srcset="img/popup_Calendar-4-picture@4x.png 2x" alt="">
+                        <img src="img/popup_Calendar-4-picture@2x.png" srcset="img/popup_Calendar-4-picture@4x.png 2x" alt="PortfolioPicture">
                     </picture>
 
                     <picture>
                         <source type="image/avif" srcset="img/popup_Calendar-5-picture@2x.avif 1x, img/popup_Calendar-5-picture@4x.avif 2x">
                         <source type="image/webp" srcset="img/popup_Calendar-5-picture@2x.webp 1x, img/popup_Calendar-5-picture@4x.webp 2x">
-                        <img src="img/popup_Calendar-5-picture@2x.png" srcset="img/popup_Calendar-5-picture@4x.png 2x" alt="">
+                        <img src="img/popup_Calendar-5-picture@2x.png" srcset="img/popup_Calendar-5-picture@4x.png 2x" alt="PortfolioPicture">
                     </picture>
 
                     <picture>
                         <source type="image/avif" srcset="img/popup_Calendar-6-picture@2x.avif 1x, img/popup_Calendar-6-picture@4x.avif 2x">
                         <source type="image/webp" srcset="img/popup_Calendar-6-picture@2x.webp 1x, img/popup_Calendar-6-picture@4x.webp 2x">
-                        <img src="img/popup_Calendar-6-picture@2x.png" srcset="img/popup_Calendar-6-picture@4x.png 2x" alt="">
+                        <img src="img/popup_Calendar-6-picture@2x.png" srcset="img/popup_Calendar-6-picture@4x.png 2x" alt="PortfolioPicture">
                     </picture>
                 </div>
-            </div>
             </div>
         </div>
     </div>
