--- a/src/modules/popup/CertificatePopup.html
+++ b/src/modules/popup/CertificatePopup.html
@@ -21,7 +21,7 @@
                         <picture>
                             <source type="image/avif" srcset="img/certificate_2023@2x.avif 1x, img/certificate_2023@4x.avif 2x">
                             <source type="image/webp" srcset="img/certificate_2023@2x.webp 1x, img/certificate_2023@4x.webp 2x">
-                            <img src="img/certificate_2023@2x.png" srcset="img/certificate_2023@4x.png 2x" alt="">
+                            <img src="img/certificate_2023@2x.png" srcset="img/certificate_2023@4x.png 2x" alt="2023 Certificate">
                         </picture>
                     </div>
 
@@ -32,7 +32,7 @@
                         <picture>
                             <source type="image/avif" srcset="img/certificate_2022@2x.avif 1x, img/certificate_2022@4x.avif 2x">
                             <source type="image/webp" srcset="img/certificate_2022@2x.webp 1x, img/certificate_2022@4x.webp 2x">
-                            <img src="img/certificate_2022@2x.png" srcset="img/certificate_2022@4x.png 2x" alt="">
+                            <img src="img/certificate_2022@2x.png" srcset="img/certificate_2022@4x.png 2x" alt="2022 Certificate">
                         </picture>
                     </div>
 
@@ -43,12 +43,11 @@
                         <picture>
                             <source type="image/avif" srcset="img/certificate_2019@2x.avif 1x, img/certificate_2019@4x.avif 2x">
                             <source type="image/webp" srcset="img/certificate_2019@2x.webp 1x, img/certificate_2019@4x.webp 2x">
-                            <img src="img/certificate_2019@2x.png" srcset="img/certificate_2019@4x.png 2x" alt="">
+                            <img src="img/certificate_2019@2x.png" srcset="img/certificate_2019@4x.png 2x" alt="2019 Certificate">
                         </picture>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
     </div>
 </div>
