--- a/src/modules/popup/FourCAPopup.html
+++ b/src/modules/popup/FourCAPopup.html
@@ -28,13 +28,13 @@
                     <picture>
                         <source type="image/avif" srcset="img/popup_FourCA-1-picture@2x.avif 1x, img/popup_FourCA-1-picture@4x.avif 2x">
                         <source type="image/webp" srcset="img/popup_FourCA-1-picture@2x.webp 1x, img/popup_FourCA-1-picture@4x.webp 2x">
-                        <img src="img/popup_FourCA-1-picture@2x.png" srcset="img/popup_FourCA-1-picture@4x.png 2x" alt="">
+                        <img src="img/popup_FourCA-1-picture@2x.png" srcset="img/popup_FourCA-1-picture@4x.png 2x" alt="PortfolioPicture">
                     </picture>
 
                     <picture>
                         <source type="image/avif" srcset="img/popup_FourCA-2-picture@2x.avif 1x, img/popup_FourCA-2-picture@4x.avif 2x">
                         <source type="image/webp" srcset="img/popup_FourCA-2-picture@2x.webp 1x, img/popup_FourCA-2-picture@4x.webp 2x">
-                        <img src="img/popup_FourCA-2-picture@2x.png" srcset="img/popup_FourCA-2-picture@4x.png 2x" alt="">
+                        <img src="img/popup_FourCA-2-picture@2x.png" srcset="img/popup_FourCA-2-picture@4x.png 2x" alt="PortfolioPicture">
                     </picture>
                 </div>
 
@@ -46,13 +46,13 @@
                     <picture>
                         <source type="image/avif" srcset="img/popup_FourCA-3-picture@2x.avif 1x, img/popup_FourCA-3-picture@4x.avif 2x">
                         <source type="image/webp" srcset="img/popup_FourCA-3-picture@2x.webp 1x, img/popup_FourCA-3-picture@4x.webp 2x">
-                        <img src="img/popup_FourCA-3-picture@2x.png" srcset="img/popup_FourCA-3-picture@4x.png 2x" alt="">
+                        <img src="img/popup_FourCA-3-picture@2x.png" srcset="img/popup_FourCA-3-picture@4x.png 2x" alt="PortfolioPicture">
                     </picture>
 
                     <picture>
                         <source type="image/avif" srcset="img/popup_FourCA-4-picture@2x.avif 1x, img/popup_FourCA-4-picture@4x.avif 2x">
                         <source type="image/webp" srcset="img/popup_FourCA-4-picture@2x.webp 1x, img/popup_FourCA-4-picture@4x.webp 2x">
-                        <img src="img/popup_FourCA-4-picture@2x.png" srcset="img/popup_FourCA-4-picture@4x.png 2x" alt="">
+                        <img src="img/popup_FourCA-4-picture@2x.png" srcset="img/popup_FourCA-4-picture@4x.png 2x" alt="PortfolioPicture">
                     </picture>
                 </div>
 
@@ -60,28 +60,27 @@
                     <picture>
                         <source type="image/avif" srcset="img/popup_FourCA-5-picture@2x.avif 1x, img/popup_FourCA-5-picture@4x.avif 2x">
                         <source type="image/webp" srcset="img/popup_FourCA-5-picture@2x.webp 1x, img/popup_FourCA-5-picture@4x.webp 2x">
-                        <img src="img/popup_FourCA-5-picture@2x.png" srcset="img/popup_FourCA-5-picture@4x.png 2x" alt="">
+                        <img src="img/popup_FourCA-5-picture@2x.png" srcset="img/popup_FourCA-5-picture@4x.png 2x" alt="PortfolioPicture">
                     </picture>
 
                     <picture>
                         <source type="image/avif" srcset="img/popup_FourCA-6-picture@2x.avif 1x, img/popup_FourCA-6-picture@4x.avif 2x">
                         <source type="image/webp" srcset="img/popup_FourCA-6-picture@2x.webp 1x, img/popup_FourCA-6-picture@4x.webp 2x">
-                        <img src="img/popup_FourCA-6-picture@2x.png" srcset="img/popup_FourCA-6-picture@4x.png 2x" alt="">
+                        <img src="img/popup_FourCA-6-picture@2x.png" srcset="img/popup_FourCA-6-picture@4x.png 2x" alt="PortfolioPicture">
                     </picture>
 
                     <picture>
                         <source type="image/avif" srcset="img/popup_FourCA-7-picture@2x.avif 1x, img/popup_FourCA-7-picture@4x.avif 2x">
                         <source type="image/webp" srcset="img/popup_FourCA-7-picture@2x.webp 1x, img/popup_FourCA-7-picture@4x.webp 2x">
-                        <img src="img/popup_FourCA-7-picture@2x.png" srcset="img/popup_FourCA-7-picture@4x.png 2x" alt="">
+                        <img src="img/popup_FourCA-7-picture@2x.png" srcset="img/popup_FourCA-7-picture@4x.png 2x" alt="PortfolioPicture">
                     </picture>
 
                     <picture>
                         <source type="image/avif" srcset="img/popup_FourCA-8-picture@2x.avif 1x, img/popup_FourCA-8-picture@4x.avif 2x">
                         <source type="image/webp" srcset="img/popup_FourCA-8-picture@2x.webp 1x, img/popup_FourCA-8-picture@4x.webp 2x">
-                        <img src="img/popup_FourCA-8-picture@2x.png" srcset="img/popup_FourCA-8-picture@4x.png 2x" alt="">
+                        <img src="img/popup_FourCA-8-picture@2x.png" srcset="img/popup_FourCA-8-picture@4x.png 2x" alt="PortfolioPicture">
                     </picture>
                 </div>
-            </div>
             </div>
         </div>
     </div>
