--- a/src/modules/popup/NirvanaPopup.html
+++ b/src/modules/popup/NirvanaPopup.html
@@ -7,7 +7,7 @@
                     <picture>
                         <source type="image/avif" srcset="img/Logo_Nirvana@2x.avif 1x, img/Logo_Nirvana@4x.avif 2x">
                         <source type="image/webp" srcset="img/Logo_Nirvana@2x.webp 1x, img/Logo_Nirvana@4x.webp 2x">
-                        <img src="img/Logo_Nirvana@2x.png" srcset="img/Logo_Nirvana@4x.png 2x" alt="">
+                        <img src="img/Logo_Nirvana@2x.png" srcset="img/Logo_Nirvana@4x.png 2x" alt="PortfolioPicture">
                     </picture>
 
                     <a id="NirvanaCross" class="popup__close">
@@ -30,13 +30,13 @@
                     <picture>
                         <source type="image/avif" srcset="img/popup_Nirvana-1-picture@2x.avif 1x, img/popup_Nirvana-1-picture@4x.avif 2x">
                         <source type="image/webp" srcset="img/popup_Nirvana-1-picture@2x.webp 1x, img/popup_Nirvana-1-picture@4x.webp 2x">
-                        <img src="img/popup_Nirvana-1-picture@2x.png" srcset="img/popup_Nirvana-1-picture@4x.png 2x" alt="">
+                        <img src="img/popup_Nirvana-1-picture@2x.png" srcset="img/popup_Nirvana-1-picture@4x.png 2x" alt="PortfolioPicture">
                     </picture>
 
                     <picture>
                         <source type="image/avif" srcset="img/popup_Nirvana-2-picture@2x.avif 1x, img/popup_Nirvana-2-picture@4x.avif 2x">
                         <source type="image/webp" srcset="img/popup_Nirvana-2-picture@2x.webp 1x, img/popup_Nirvana-2-picture@4x.webp 2x">
-                        <img src="img/popup_Nirvana-2-picture@2x.png" srcset="img/popup_Nirvana-2-picture@4x.png 2x" alt="">
+                        <img src="img/popup_Nirvana-2-picture@2x.png" srcset="img/popup_Nirvana-2-picture@4x.png 2x" alt="PortfolioPicture">
                     </picture>
                 </div>
 
@@ -44,28 +44,27 @@
                     <picture>
                         <source type="image/avif" srcset="img/popup_Nirvana-3-picture@2x.avif 1x, img/popup_Nirvana-3-picture@4x.avif 2x">
                         <source type="image/webp" srcset="img/popup_Nirvana-3-picture@2x.webp 1x, img/popup_Nirvana-3-picture@4x.webp 2x">
-                        <img src="img/popup_Nirvana-3-picture@2x.png" srcset="img/popup_Nirvana-3-picture@4x.png 2x" alt="">
+                        <img src="img/popup_Nirvana-3-picture@2x.png" srcset="img/popup_Nirvana-3-picture@4x.png 2x" alt="PortfolioPicture">
                     </picture>
 
                     <picture>
                         <source type="image/avif" srcset="img/popup_Nirvana-4-picture@2x.avif 1x, img/popup_Nirvana-4-picture@4x.avif 2x">
                         <source type="image/webp" srcset="img/popup_Nirvana-4-picture@2x.webp 1x, img/popup_Nirvana-4-picture@4x.webp 2x">
-                        <img src="img/popup_Nirvana-4-picture@2x.png" srcset="img/popup_Nirvana-4-picture@4x.png 2x" alt="">
+                        <img src="img/popup_Nirvana-4-picture@2x.png" srcset="img/popup_Nirvana-4-picture@4x.png 2x" alt="PortfolioPicture">
                     </picture>
 
                     <picture>
                         <source type="image/avif" srcset="img/popup_Nirvana-5-picture@2x.avif 1x, img/popup_Nirvana-5-picture@4x.avif 2x">
                         <source type="image/webp" srcset="img/popup_Nirvana-5-picture@2x.webp 1x, img/popup_Nirvana-5-picture@4x.webp 2x">
-                        <img src="img/popup_Nirvana-5-picture@2x.png" srcset="img/popup_Nirvana-5-picture@4x.png 2x" alt="">
+                        <img src="img/popup_Nirvana-5-picture@2x.png" srcset="img/popup_Nirvana-5-picture@4x.png 2x" alt="PortfolioPicture">
                     </picture>
 
                     <picture>
                         <source type="image/avif" srcset="img/popup_Nirvana-6-picture@2x.avif 1x, img/popup_Nirvana-6-picture@4x.avif 2x">
                         <source type="image/webp" srcset="img/popup_Nirvana-6-picture@2x.webp 1x, img/popup_Nirvana-6-picture@4x.webp 2x">
-                        <img src="img/popup_Nirvana-6-picture@2x.png" srcset="img/popup_Nirvana-6-picture@4x.png 2x" alt="">
+                        <img src="img/popup_Nirvana-6-picture@2x.png" srcset="img/popup_Nirvana-6-picture@4x.png 2x" alt="PortfolioPicture">
                     </picture>
                 </div>
-            </div>
             </div>
         </div>
     </div>
