--- a/src/modules/popup/holdMyCodePopup.html
+++ b/src/modules/popup/holdMyCodePopup.html
@@ -36,13 +36,13 @@
                         <picture>
                             <source type="image/avif" srcset="img/popup_HoldMyCode-1-picture@2x.avif 1x, img/popup_HoldMyCode-1-picture@4x.avif 2x">
                             <source type="image/webp" srcset="img/popup_HoldMyCode-1-picture@2x.webp 1x, img/popup_HoldMyCode-1-picture@4x.webp 2x">
-                            <img src="img/popup_HoldMyCode-1-picture@2x.png" srcset="img/popup_HoldMyCode-1-picture@4x.png 2x" alt="">
+                            <img src="img/popup_HoldMyCode-1-picture@2x.png" srcset="img/popup_HoldMyCode-1-picture@4x.png 2x" alt="PortfolioPicture">
                         </picture>
 
                         <picture>
                             <source type="image/avif" srcset="img/popup_HoldMyCode-2-picture@2x.avif 1x, img/popup_HoldMyCode-2-picture@4x.avif 2x">
                             <source type="image/webp" srcset="img/popup_HoldMyCode-2-picture@2x.webp 1x, img/popup_HoldMyCode-2-picture@4x.webp 2x">
-                            <img src="img/popup_HoldMyCode-2-picture@2x.png" srcset="img/popup_HoldMyCode-2-picture@4x.png 2x" alt="">
+                            <img src="img/popup_HoldMyCode-2-picture@2x.png" srcset="img/popup_HoldMyCode-2-picture@4x.png 2x" alt="PortfolioPicture">
                         </picture>
                     </div>
                 </div>
@@ -60,13 +60,13 @@
                         <picture>
                             <source type="image/avif" srcset="img/popup_HoldMyCode-3-picture@2x.avif 1x, img/popup_HoldMyCode-3-picture@4x.avif 2x">
                             <source type="image/webp" srcset="img/popup_HoldMyCode-3-picture@2x.webp 1x, img/popup_HoldMyCode-3-picture@4x.webp 2x">
-                            <img src="img/popup_HoldMyCode-3-picture@2x.png" srcset="img/popup_HoldMyCode-3-picture@4x.png 2x" alt="">
+                            <img src="img/popup_HoldMyCode-3-picture@2x.png" srcset="img/popup_HoldMyCode-3-picture@4x.png 2x" alt="PortfolioPicture">
                         </picture>
 
                         <picture>
                             <source type="image/avif" srcset="img/popup_HoldMyCode-4-picture@2x.avif 1x, img/popup_HoldMyCode-4-picture@4x.avif 2x">
                             <source type="image/webp" srcset="img/popup_HoldMyCode-4-picture@2x.webp 1x, img/popup_HoldMyCode-4-picture@4x.webp 2x">
-                            <img src="img/popup_HoldMyCode-4-picture@2x.png" srcset="img/popup_HoldMyCode-4-picture@4x.png 2x" alt="">
+                            <img src="img/popup_HoldMyCode-4-picture@2x.png" srcset="img/popup_HoldMyCode-4-picture@4x.png 2x" alt="PortfolioPicture">
                         </picture>
                     </div>
                 </div>
@@ -84,13 +84,13 @@
                         <picture>
                             <source type="image/avif" srcset="img/popup_HoldMyCode-5-picture@2x.avif 1x, img/popup_HoldMyCode-5-picture@4x.avif 2x">
                             <source type="image/webp" srcset="img/popup_HoldMyCode-5-picture@2x.webp 1x, img/popup_HoldMyCode-5-picture@4x.webp 2x">
-                            <img src="img/popup_HoldMyCode-5-picture@2x.png" srcset="img/popup_HoldMyCode-5-picture@4x.png 2x" alt="">
+                            <img src="img/popup_HoldMyCode-5-picture@2x.png" srcset="img/popup_HoldMyCode-5-picture@4x.png 2x" alt="PortfolioPicture">
                         </picture>
 
                         <picture>
                             <source type="image/avif" srcset="img/popup_HoldMyCode-6-picture@2x.avif 1x, img/popup_HoldMyCode-6-picture@4x.avif 2x">
                             <source type="image/webp" srcset="img/popup_HoldMyCode-6-picture@2x.webp 1x, img/popup_HoldMyCode-6-picture@4x.webp 2x">
-                            <img src="img/popup_HoldMyCode-6-picture@2x.png" srcset="img/popup_HoldMyCode-6-picture@4x.png 2x" alt="">
+                            <img src="img/popup_HoldMyCode-6-picture@2x.png" srcset="img/popup_HoldMyCode-6-picture@4x.png 2x" alt="PortfolioPicture">
                         </picture>
                     </div>
                 </div>
