--- a/src/modules/portfolio/portfolio.html
+++ b/src/modules/portfolio/portfolio.html
@@ -10,7 +10,7 @@
                     <picture>
                       <source type="image/avif" srcset="img/main1@2x.avif 1x, img/main1@4x.avif 2x">
                       <source type="image/webp" srcset="img/main1@2x.webp 1x, img/main1@4x.webp 2x">
-                      <img src="img/main1@2x.png" srcset="img/main1@4x.png 2x" alt="">
+                      <img src="img/main1@2x.png" srcset="img/main1@4x.png 2x" alt="Hold my Code">
                     </picture>
                 </div>
             </div>
@@ -20,7 +20,7 @@
                     <picture>
                         <source type="image/avif" srcset="img/sub1@2x.avif 1x, img/sub1@4x.avif 2x">
                         <source type="image/webp" srcset="img/sub1@2x.webp 1x, img/sub1@4x.webp 2x">
-                        <img src="img/sub1@2x.png" srcset="img/sub1@4x.png 2x" alt="">
+                        <img src="img/sub1@2x.png" srcset="img/sub1@4x.png 2x" alt="Wine shop">
                     </picture>
                 </div>
             </div>
@@ -30,7 +30,7 @@
                     <picture>
                         <source type="image/avif" srcset="img/sub2@2x.avif 1x, img/sub2@4x.avif 2x">
                         <source type="image/webp" srcset="img/sub2@2x.webp 1x, img/sub2@4x.webp 2x">
-                        <img src="img/sub2@2x.png" srcset="img/sub2@4x.png 2x" alt="">
+                        <img src="img/sub2@2x.png" srcset="img/sub2@4x.png 2x" alt="The fourth creative association">
                     </picture>
                 </div>
             </div>
@@ -40,7 +40,7 @@
                     <picture>
                         <source type="image/avif" srcset="img/sub3@2x.avif 1x, img/sub3@4x.avif 2x">
                         <source type="image/webp" srcset="img/sub3@2x.webp 1x, img/sub3@4x.webp 2x">
-                        <img src="img/sub3@2x.png" srcset="img/sub3@4x.png 2x" alt="">
+                        <img src="img/sub3@2x.png" srcset="img/sub3@4x.png 2x" alt="Calendar of life">
                     </picture>
                 </div>
             </div>
@@ -50,7 +50,7 @@
                     <picture>
                         <source type="image/avif" srcset="img/main2@2x.avif 1x, img/main2@4x.avif 2x">
                         <source type="image/webp" srcset="img/main2@2x.webp 1x, img/main2@4x.webp 2x">
-                        <img src="img/main2@2x.png" srcset="img/main2@4x.png 2x" alt="">
+                        <img src="img/main2@2x.png" srcset="img/main2@4x.png 2x" alt="Minimalism">
                     </picture>
                 </div>
             </div>
@@ -60,7 +60,7 @@
                     <picture>
                         <source type="image/avif" srcset="img/sub4@2x.avif 1x, img/sub4@4x.avif 2x">
                         <source type="image/webp" srcset="img/sub4@2x.webp 1x, img/sub4@4x.webp 2x">
-                        <img src="img/sub4@2x.png" srcset="img/sub4@4x.png 2x" alt="">
+                        <img src="img/sub4@2x.png" srcset="img/sub4@4x.png 2x" alt="FoodBlog">
                     </picture>
                 </div>
             </div>
@@ -70,7 +70,7 @@
                     <picture>
                         <source type="image/avif" srcset="img/sub5@2x.avif 1x, img/sub5@4x.avif 2x">
                         <source type="image/webp" srcset="img/sub5@2x.webp 1x, img/sub5@4x.webp 2x">
-                        <img src="img/sub5@2x.png" srcset="img/sub5@4x.png 2x" alt="">
+                        <img src="img/sub5@2x.png" srcset="img/sub5@4x.png 2x" alt="Nirvana">
                     </picture>
                 </div>
             </div>
@@ -80,7 +80,7 @@
                     <picture>
                         <source type="image/avif" srcset="img/sub6@2x.avif 1x, img/sub6@4x.avif 2x">
                         <source type="image/webp" srcset="img/sub6@2x.webp 1x, img/sub6@4x.webp 2x">
-                        <img src="img/sub6@2x.png" srcset="img/sub6@4x.png 2x" alt="">
+                        <img src="img/sub6@2x.png" srcset="img/sub6@4x.png 2x" alt="Turkey Tourist">
                     </picture>
                 </div>
             </div>
@@ -90,14 +90,14 @@
                     <picture>
                         <source type="image/avif" srcset="img/main3@2x.avif 1x, img/main3@4x.avif 2x">
                         <source type="image/webp" srcset="img/main3@2x.webp 1x, img/main3@4x.webp 2x">
-                        <img src="img/main3@2x.png" srcset="img/main3@4x.png 2x" alt="">
+                        <img src="img/main3@2x.png" srcset="img/main3@4x.png 2x" alt="Victorian">
                     </picture>
                 </div>
             </div>
         </div>
 
-        <!-- <button class="button button-big button-solid hidden">
+        <button class="button button-big button-solid hidden">
             <p class="buttonBigText">Смотреть еще</p>
-        </button> -->
+        </button>
     </div>
 </section>
