--- a/src/modules/reviews/reviews.html
+++ b/src/modules/reviews/reviews.html
@@ -26,7 +26,7 @@
                             <picture>
                                 <source type="image/avif" srcset="img/swiper-olga@2x.avif 1x, img/swiper-olga@4x.avif 2x">
                                 <source type="image/webp" srcset="img/swiper-olga@2x.webp 1x, img/swiper-olga@4x.webp 2x">
-                                <img src="img/swiper-olga@2x.png" srcset="img/swiper-olga@4x.png 2x" alt="">
+                                <img src="img/swiper-olga@2x.png" srcset="img/swiper-olga@4x.png 2x" alt="Olga Berko">
                             </picture>
                         </div>
 
@@ -49,7 +49,7 @@
                             <picture>
                                 <source type="image/avif" srcset="img/swiper-vishnevetskaya@2x.avif 1x, img/swiper-vishnevetskaya@4x.avif 2x">
                                 <source type="image/webp" srcset="img/swiper-vishnevetskaya@2x.webp 1x, img/swiper-vishnevetskaya@4x.webp 2x">
-                                <img src="img/swiper-vishnevetskaya@2x.png" srcset="img/swiper-vishnevetskaya@4x.png 2x" alt="">
+                                <img src="img/swiper-vishnevetskaya@2x.png" srcset="img/swiper-vishnevetskaya@4x.png 2x" alt="Lyubov Vishnevetskaya">
                             </picture>
                         </div>
 
@@ -70,6 +70,9 @@
         <!-- If we need pagination -->
         <div class="swiper--pagination"></div>
 
-        <p class="text20 reviews__other">Остальные отзывы можно увидеть <br> <a target="_blank" href="https://kwork.ru/user/katye_">на моей странице в KWORK </a></p>
+        <p class="text20 reviews__other">
+            Остальные отзывы можно увидеть <br>
+            <a target="_blank" href="https://kwork.ru/user/katye_">на моей странице в KWORK </a>
+        </p>
     </div>
 </section>
