--- a/src/modules/about/about.html
+++ b/src/modules/about/about.html
@@ -119,14 +119,14 @@
                             </span>
                         </p>
 
-                        <a class="tabs__resume hidden title-parent inline-block">
+                        <a class="tabs__resume hidden title-parent inline-block" target="_blank" href="https://katedesign.info/resources/resume.pdf">
                             <!-- <picture>
                             <source type="image/avif" srcset="img/{name}@1x.avif 1x, img/{name}@2x.avif 2x">
                             <source type="image/webp" srcset="img/{name}@1x.webp 1x, img/{name}@2x.webp 2x">
                             <img src="img/{name}@1x.jpg" srcset="img/{name}@2x.jpg 2x" alt="">
                             </picture> -->
 
-                            <a target="_blank" href="https://katedesign.info/resources/resume.pdf"><span data-queue="10" class="text20 title-animation">Резюме_Ракитова_Екатерина.pdf</span></a>
+                            <span data-queue="10" class="text20 title-animation">Резюме_Ракитова_Екатерина.pdf</span>
                         </a>
                     </div>
                 </div>
