--- a/src/modules/popup/MinimalismPopup.html
+++ b/src/modules/popup/MinimalismPopup.html
@@ -30,13 +30,13 @@
                     <picture>
                         <source type="image/avif" srcset="img/popup_Minimalism-1-picture@2x.avif 1x, img/popup_Minimalism-1-picture@4x.avif 2x">
                         <source type="image/webp" srcset="img/popup_Minimalism-1-picture@2x.webp 1x, img/popup_Minimalism-1-picture@4x.webp 2x">
-                        <img src="img/popup_Minimalism-1-picture@2x.png" srcset="img/popup_Minimalism-1-picture@4x.png 2x" alt="">
+                        <img src="img/popup_Minimalism-1-picture@2x.png" srcset="img/popup_Minimalism-1-picture@4x.png 2x" alt="PortfolioPicture">
                     </picture>
 
                     <picture>
                         <source type="image/avif" srcset="img/popup_Minimalism-2-picture@2x.avif 1x, img/popup_Minimalism-2-picture@4x.avif 2x">
                         <source type="image/webp" srcset="img/popup_Minimalism-2-picture@2x.webp 1x, img/popup_Minimalism-2-picture@4x.webp 2x">
-                        <img src="img/popup_Minimalism-2-picture@2x.png" srcset="img/popup_Minimalism-2-picture@4x.png 2x" alt="">
+                        <img src="img/popup_Minimalism-2-picture@2x.png" srcset="img/popup_Minimalism-2-picture@4x.png 2x" alt="PortfolioPicture">
                     </picture>
                 </div>
 
@@ -44,28 +44,27 @@
                     <picture>
                         <source type="image/avif" srcset="img/popup_Minimalism-3-picture@2x.avif 1x, img/popup_Minimalism-3-picture@4x.avif 2x">
                         <source type="image/webp" srcset="img/popup_Minimalism-3-picture@2x.webp 1x, img/popup_Minimalism-3-picture@4x.webp 2x">
-                        <img src="img/popup_Minimalism-3-picture@2x.png" srcset="img/popup_Minimalism-3-picture@4x.png 2x" alt="">
+                        <img src="img/popup_Minimalism-3-picture@2x.png" srcset="img/popup_Minimalism-3-picture@4x.png 2x" alt="PortfolioPicture">
                     </picture>
 
                     <picture>
                         <source type="image/avif" srcset="img/popup_Minimalism-4-picture@2x.avif 1x, img/popup_Minimalism-4-picture@4x.avif 2x">
                         <source type="image/webp" srcset="img/popup_Minimalism-4-picture@2x.webp 1x, img/popup_Minimalism-4-picture@4x.webp 2x">
-                        <img src="img/popup_Minimalism-4-picture@2x.png" srcset="img/popup_Minimalism-4-picture@4x.png 2x" alt="">
+                        <img src="img/popup_Minimalism-4-picture@2x.png" srcset="img/popup_Minimalism-4-picture@4x.png 2x" alt="PortfolioPicture">
                     </picture>
 
                     <picture>
                         <source type="image/avif" srcset="img/popup_Minimalism-5-picture@2x.avif 1x, img/popup_Minimalism-5-picture@4x.avif 2x">
                         <source type="image/webp" srcset="img/popup_Minimalism-5-picture@2x.webp 1x, img/popup_Minimalism-5-picture@4x.webp 2x">
-                        <img src="img/popup_Minimalism-5-picture@2x.png" srcset="img/popup_Minimalism-5-picture@4x.png 2x" alt="">
+                        <img src="img/popup_Minimalism-5-picture@2x.png" srcset="img/popup_Minimalism-5-picture@4x.png 2x" alt="PortfolioPicture">
                     </picture>
 
                     <picture>
                         <source type="image/avif" srcset="img/popup_Minimalism-6-picture@2x.avif 1x, img/popup_Minimalism-6-picture@4x.avif 2x">
                         <source type="image/webp" srcset="img/popup_Minimalism-6-picture@2x.webp 1x, img/popup_Minimalism-6-picture@4x.webp 2x">
-                        <img src="img/popup_Minimalism-6-picture@2x.png" srcset="img/popup_Minimalism-6-picture@4x.png 2x" alt="">
+                        <img src="img/popup_Minimalism-6-picture@2x.png" srcset="img/popup_Minimalism-6-picture@4x.png 2x" alt="PortfolioPicture">
                     </picture>
                 </div>
-            </div>
             </div>
         </div>
     </div>
