--- a/src/modules/popup/TurkeyPopup.html
+++ b/src/modules/popup/TurkeyPopup.html
@@ -28,13 +28,13 @@
                     <picture>
                         <source type="image/avif" srcset="img/popup_Turkey-1-picture@2x.avif 1x, img/popup_Turkey-1-picture@4x.avif 2x">
                         <source type="image/webp" srcset="img/popup_Turkey-1-picture@2x.webp 1x, img/popup_Turkey-1-picture@4x.webp 2x">
-                        <img src="img/popup_Turkey-1-picture@2x.png" srcset="img/popup_Turkey-1-picture@4x.png 2x" alt="">
+                        <img src="img/popup_Turkey-1-picture@2x.png" srcset="img/popup_Turkey-1-picture@4x.png 2x" alt="PortfolioPicture">
                     </picture>
 
                     <picture>
                         <source type="image/avif" srcset="img/popup_Turkey-2-picture@2x.avif 1x, img/popup_Turkey-2-picture@4x.avif 2x">
                         <source type="image/webp" srcset="img/popup_Turkey-2-picture@2x.webp 1x, img/popup_Turkey-2-picture@4x.webp 2x">
-                        <img src="img/popup_Turkey-2-picture@2x.png" srcset="img/popup_Turkey-2-picture@4x.png 2x" alt="">
+                        <img src="img/popup_Turkey-2-picture@2x.png" srcset="img/popup_Turkey-2-picture@4x.png 2x" alt="PortfolioPicture">
                     </picture>
                 </div>
 
@@ -42,28 +42,27 @@
                     <picture>
                         <source type="image/avif" srcset="img/popup_Turkey-3-picture@2x.avif 1x, img/popup_Turkey-3-picture@4x.avif 2x">
                         <source type="image/webp" srcset="img/popup_Turkey-3-picture@2x.webp 1x, img/popup_Turkey-3-picture@4x.webp 2x">
-                        <img src="img/popup_Turkey-3-picture@2x.png" srcset="img/popup_Turkey-3-picture@4x.png 2x" alt="">
+                        <img src="img/popup_Turkey-3-picture@2x.png" srcset="img/popup_Turkey-3-picture@4x.png 2x" alt="PortfolioPicture">
                     </picture>
 
                     <picture>
                         <source type="image/avif" srcset="img/popup_Turkey-4-picture@2x.avif 1x, img/popup_Turkey-4-picture@4x.avif 2x">
                         <source type="image/webp" srcset="img/popup_Turkey-4-picture@2x.webp 1x, img/popup_Turkey-4-picture@4x.webp 2x">
-                        <img src="img/popup_Turkey-4-picture@2x.png" srcset="img/popup_Turkey-4-picture@4x.png 2x" alt="">
+                        <img src="img/popup_Turkey-4-picture@2x.png" srcset="img/popup_Turkey-4-picture@4x.png 2x" alt="PortfolioPicture">
                     </picture>
 
                     <picture>
                         <source type="image/avif" srcset="img/popup_Turkey-5-picture@2x.avif 1x, img/popup_Turkey-5-picture@4x.avif 2x">
                         <source type="image/webp" srcset="img/popup_Turkey-5-picture@2x.webp 1x, img/popup_Turkey-5-picture@4x.webp 2x">
-                        <img src="img/popup_Turkey-5-picture@2x.png" srcset="img/popup_Turkey-5-picture@4x.png 2x" alt="">
+                        <img src="img/popup_Turkey-5-picture@2x.png" srcset="img/popup_Turkey-5-picture@4x.png 2x" alt="PortfolioPicture">
                     </picture>
 
                     <picture>
                         <source type="image/avif" srcset="img/popup_Turkey-6-picture@2x.avif 1x, img/popup_Turkey-6-picture@4x.avif 2x">
                         <source type="image/webp" srcset="img/popup_Turkey-6-picture@2x.webp 1x, img/popup_Turkey-6-picture@4x.webp 2x">
-                        <img src="img/popup_Turkey-6-picture@2x.png" srcset="img/popup_Turkey-6-picture@4x.png 2x" alt="">
+                        <img src="img/popup_Turkey-6-picture@2x.png" srcset="img/popup_Turkey-6-picture@4x.png 2x" alt="PortfolioPicture">
                     </picture>
                 </div>
-            </div>
             </div>
         </div>
     </div>
