--- a/src/modules/services/services.html
+++ b/src/modules/services/services.html
@@ -25,7 +25,7 @@
                         <picture>
                             <source type="image/avif" srcset="img/landing@2x.avif 1x, img/landing@4x.avif 2x">
                             <source type="image/webp" srcset="img/landing@2x.webp 1x, img/landing@4x.webp 2x">
-                            <img src="img/landing@1x.png" srcset="img/landing@4x.png 2x" alt="">
+                            <img src="img/landing@1x.png" srcset="img/landing@4x.png 2x" alt="landing">
                         </picture>
                     </div>
                 </div>
@@ -83,7 +83,7 @@
                         <picture>
                             <source type="image/avif" srcset="img/multipage@2x.avif 1x, img/multipage@4x.avif 2x">
                             <source type="image/webp" srcset="img/multipage@2x.webp 1x, img/multipage@4x.webp 2x">
-                            <img src="img/multipage@1x.png" srcset="img/multipage@4x.png 2x" alt="">
+                            <img src="img/multipage@1x.png" srcset="img/multipage@4x.png 2x" alt="miltipage site">
                         </picture>
                     </div>
                 </div>
@@ -136,7 +136,7 @@
                         <picture>
                             <source type="image/avif" srcset="img/app@2x.avif 1x, img/app@4x.avif 2x">
                             <source type="image/webp" srcset="img/app@2x.webp 1x, img/app@4x.webp 2x">
-                            <img src="img/app@2x.png" srcset="img/app@4x.png 2x" alt="">
+                            <img src="img/app@2x.png" srcset="img/app@4x.png 2x" alt="app">
                         </picture>
                     </div>
                 </div>
