ADD: united class for block padding & some fxies

--- a/src/modules/about/about.html
+++ b/src/modules/about/about.html
@@ -1,7 +1,7 @@
 <section id="about">
-    <div class="about container">
+    <div class="about container main-padding">
 
-        <h2 id="test" class="about__title h2 hidden title-parent">
+        <h2 class="h2 hidden title-parent main-title">
             <span data-queue="1" class="title-animation">Обо мне</span>
         </h2>
 
