--- a/src/modules/discount/discount.html
+++ b/src/modules/discount/discount.html
@@ -1,7 +1,15 @@
 <section id="discount">
-    <div class="discount container">
-        <h2 class="h2">-10% на первый заказ</h2>
+    <div class="discount main-padding">
+        <div class="discount__wrapper container">
+            <h2 class="h2 hidden title-parent main-title">
+                <span data-queue="1" class="title-animation">10% на первый заказ</span>
+            </h2>
 
-        <p class="text20">Я знаю, как сложно бывает решиться на сотрудничество с фрилансером, которого вы видите впервые. Поэтому с радостью дарю Вам скидку на первый заказ</p>
+            <p class="text20 hidden title-parent">
+                <span data-queue="2" class="title-animation">
+                    Я знаю, как сложно бывает решиться на сотрудничество с фрилансером, которого вы видите впервые. Поэтому с радостью дарю Вам скидку на первый заказ
+                </span>
+            </p>
+        </div>
     </div>
 </section>
