--- a/src/modules/portfolio/portfolio.html
+++ b/src/modules/portfolio/portfolio.html
@@ -1,6 +1,6 @@
 <section id="portfolio">
-    <div class="portfolio container">
-        <h2 class="portfolio__title h2 hidden title-parent">
+    <div class="portfolio container main-padding">
+        <h2 class="h2 hidden title-parent main-title">
             <span data-queue="1" class="title-animation">Портфолио</span>
         </h2>
 
