--- a/src/modules/reasons/reasons.html
+++ b/src/modules/reasons/reasons.html
@@ -1,6 +1,6 @@
 <section id="reasons">
-    <div class="reasons container">
-        <div class="hidden title-parent reasons__title">
+    <div class="reasons container main-padding">
+        <div class="hidden title-parent reasons__title main-title">
             <div data-queue="1" class="reasons__sum h2 title-animation">
                 7
             </div>
