--- a/src/modules/reviews/reviews.html
+++ b/src/modules/reviews/reviews.html
@@ -1,6 +1,6 @@
 <section id="reviews">
-    <div class="reviews container">
-        <h2 class="portfolio__title h2 hidden title-parent">
+    <div class="reviews container main-padding">
+        <h2 class="portfolio__title h2 hidden title-parent main-title">
             <span data-queue="1" class="title-animation">Отзывы</span>
         </h2>
 
