--- a/src/modules/services/services.html
+++ b/src/modules/services/services.html
@@ -1,6 +1,6 @@
 <section id="services">
-    <div class="services container">
-        <h2 class="services__title h2 hidden title-parent">
+    <div class="services container main-padding">
+        <h2 class="h2 hidden title-parent main-title">
             <span data-queue="1" class="title-animation">Услуги</span>
         </h2>
 
