--- a/src/modules/header/header.html
+++ b/src/modules/header/header.html
@@ -59,7 +59,5 @@
         </picture>
     </div>
 
-    <div class="header__mobileFooter">
-
-    </div>
+    <div class="header__mobileFooter"></div>
 </div>
