--- a/src/modules/about/about.html
+++ b/src/modules/about/about.html
@@ -246,22 +246,7 @@
                             </div>
 
                             <div class="tabs__description js-tabs__description">
-                                <p class="text20">Работаем на постоянной основе с 2022 года. Разрабатывала одностраничные сайты для медицинских учреждений</p>
-                            </div>
-                        </div>
-
-                        <div data-customer="4TO" class="tabs__dropdown js-tabs__dropdown">
-                            <div class="tabs__customer">
-                                <h4 class="text20">Четвертое Творческое Объединение</h4>
-
-                                <div class="tabs__plus js-tabs__plus">
-                                    <div></div>
-                                    <div></div>
-                                </div>
-                            </div>
-
-                            <div class="tabs__description js-tabs__description">
-                                <p class="text20">Работаем на постоянной основе с 2022 года. Разрабатывала одностраничные сайты для медицинских учреждений</p>
+                                <p class="text20">Работаем на постоянной основе с 2023 года. Разрабатываем корпоративные приложения для компании, а так же обрабатываем качество изображений на сайте</p>
                             </div>
                         </div>
                     </div>
