--- a/src/modules/about/about.html
+++ b/src/modules/about/about.html
@@ -120,11 +120,11 @@
                         </p>
 
                         <a class="tabs__resume hidden title-parent inline-block" target="_blank" href="https://katedesign.info/resources/resume.pdf">
-                            <!-- <picture>
-                            <source type="image/avif" srcset="img/{name}@1x.avif 1x, img/{name}@2x.avif 2x">
-                            <source type="image/webp" srcset="img/{name}@1x.webp 1x, img/{name}@2x.webp 2x">
-                            <img src="img/{name}@1x.jpg" srcset="img/{name}@2x.jpg 2x" alt="">
-                            </picture> -->
+                            <picture>
+                                <source type="image/avif" srcset="img/resume@1x.avif 1x, img/resume@2x.avif 2x">
+                                <source type="image/webp" srcset="img/resume@1x.webp 1x, img/resume@2x.webp 2x">
+                                <img src="img/resume@1x.png" srcset="img/resume@2x.png 2x" alt="Resume">
+                            </picture>
 
                             <span data-queue="10" class="text20 title-animation">Резюме_Ракитова_Екатерина.pdf</span>
                         </a>
